# vvz-bhlff

./: .flake8  .gitattributes  .gitignore  7D_SPECIFICITY_ANALYSIS.md  =1.0.0  A11_PROBLEM_ANALYSIS.md  ANALYSIS_A11_3D_VS_7D.md  ANALYSIS_A11_DEEPDIVE.md  ANALYSIS_A11_FINAL.md  ANALYSIS_A11_GRID_DISTORTIONS.md  BVP_COMPLEX_FIELD_ANALYSIS.md  BVP_CORE_CONSOLIDATION_REPORT.md  CODE_ANALYSIS_REPORT.md  CODE_MAP_SUMMARY.md  COMPREHENSIVE_DEVIATIONS_ANALYSIS_REPORT.md  COVERAGE_IMPROVEMENT_REPORT.md  COVERAGE_REPORT_STEPS_00_01.md  DETAILED_7D_REMEDIATION_PLAN.md  DETAILED_CORRECTION_PLAN.md  DEVIATIONS_ANALYSIS.md  DEVIATIONS_ANALYSIS_COMPLETION_REPORT.md  DEVIATIONS_ANALYSIS_REPORT.md  DEVIATIONS_ANALYSIS_SUMMARY.md  DEVIATIONS_ELIMINATION_COMPLETE_REPORT.md  DEVIATIONS_ELIMINATION_FINAL_REPORT.md  DEVIATIONS_FINAL_FIX_REPORT.md  DEVIATIONS_FIXED_REPORT.md  DEVIATIONS_FULLY_FIXED_REPORT.md  DEVIATIONS_VERIFICATION_REPORT.md  DUPLICATES_REFACTORING_PLAN.md  DUPLICATION_CLEANUP_REPORT.md  ERRORS_AND_MISSING_METHODS_REPORT.md  FFT_SOLVER_3D_REMOVAL_REPORT.md  FIX_3D_TO_7D_REPORT.md  IMPROVEMENTS_BLOCK_CUDA_MEMORY.md  LOGICAL_DUPLICATES_ANALYSIS_REPORT.md  METHOD_INDEX_SUMMARY.md  MISSING_METHODS_ANALYSIS.md  MISSING_METHODS_REPORT.md  OUTPUT_DIRECTORY_SUMMARY.md  (+64 more)
.cursor/rules/: aftersavefile.mdc  aftersplitfile.mdc  codemapper.mdc  codeuse.mdc  codingstd.mdc  cuda.mdc  cudarule.mdc  docindex.mdc  fallbackcpu.mdc  prjstd.mdc  steprules.mdc
.github/workflows/: ci.yml  docs.yml  release.yml
analysis_output/: classical_patterns_correction_plan.md  classical_patterns_violations_report.md  code_issues.yaml  code_map.md  code_map.yaml  code_map_report.txt  code_quality_issues_level_b.md  current_code_inventory.md  hypothesis_a_final_report.md  hypothesis_a_readiness_plan.md  hypothesis_a_validation_report.md  immediate_actions.md  issues_report.txt  level_a_block_cuda_memory_plan.md  level_a_validation_complete.md  level_b_classical_patterns_correction_plan.md  level_b_inventory_report.md  level_b_sources_analysis.md  level_b_stepwise_decay_analysis.md  level_b_tests_compliance_report.md  level_b_tests_fix_plan.md  level_b_validation_status.md  method_index.md  method_index.txt  method_index.yaml  step_1_1_1_completion_report.md  step_1_1_2_completion_report.md  step_1_3_2_completion_report.md  step_1_completion_report.md  step_1_full_inventory.md  step_3_completion_report.md  step_4_1_completion_report.md  step_4_2_completion_report.md  step_4_3_completion_report.md  step_4_3_final_summary.md  step_5_completion_report.md  theory_compliance_analysis.md  theory_deviations_report.md  theory_violations_correction_plan.md
bhlff/: __init__.py
bhlff/cli/: __init__.py  analyze.py  cuda_smoke.py  main.py  quench_detect.py  report.py  run.py  step03.py  step04_level_a.py
bhlff/core/: __init__.py  bvp_core.py  bvp_envelope_solver.py  bvp_impedance_calculator.py  bvp_interface.py  quench_detector.py
bhlff/geometry/: __init__.py
bhlff/solvers/: __init__.py
bhlff/testing/: automated_reporting.py  automated_testing.py  quality_monitor.py
bhlff/utils/: __init__.py  cuda_backend.py  cuda_utils.py  logging.py  memory_monitor.py
code_analysis/: code_issues.yaml  code_map.yaml  code_map_report.txt  issues_report.txt  level_a_issues_report.md  method_index.txt  method_index.yaml  pass_implementation_tasks.md
configs/: automated_testing.json  bvp_7d_config.json  bvp_core_config.json  default.json  level_b_tests.json  reporting.json
configs/level_a/: A01_plane_wave.json  A02_multi_plane.json  A03_zero_mode.json  A04_time_harmonic.json  A05_residual_energy.json  A06_quench_detection.json  A07_impedance_calculation.json  A11_scale_length.json  A12_units_invariance.json  benchmarks.json  fft_solver.json  scaling.json  validation.json
configs/level_b/: power_law.json
configs/level_c/: C1_single_wall.json  C2_chain_abcd.json  C3C4_beating_pinning.json
configs/level_d/: D1_mode_superposition.json  D2_field_projections.json  D3_phase_streamlines.json
configs/level_e/: defect_tests.json  level_e_experiments.json  soliton_tests.json  theory_integration.json
configs/level_f/: collective_excitations.json  multi_particle.json  nonlinear_effects.json  phase_transitions.json
configs/level_g/: G1_cosmological_evolution.json  G2_large_scale_structure.json  G3_astrophysical_objects.json  G4_gravitational_effects.json  G5_particle_inversion.json
docs/: bvp_api_reference.md  coding_standards.md  conf.py  index.rst  level_b_analysis.md  level_g_models.md  soliton_optimization_algorithms.md  tech_spec.md
docs/_static/: custom.css
docs/steps/: step_13_deviations_remediation.md
docs/theory/: 7d-30-БВП_план_численных_экспериментов.md  7d-39-БВП_Диаграма_классов.md  (+20 more)
examples/: bvp_7d_example.py  level_b_example.py  level_c_example.py  level_d_example.py  level_f_example.py  level_g_example.py  step_03_time_integrators_example.py
scripts/: README_level_a_experiments.md  cuda_smoke_test.py  demo_7d_vectorized_processing.py  demo_block_processing.py  demo_enhanced_block_processing.py  demo_ml_prediction_models.py  demo_ml_prediction_simple.py  demo_vectorized_ml_methods.py  demo_vectorized_power_law.py  demo_vectorized_processing.py  run_level_a_experiments.py  run_level_a_test_a06.py  run_level_c_experiments.py  validate_level_c_acceptance_criteria.py
tests/: conftest.py  test_bvp_framework.py  test_bvp_level_a_integration.py  test_bvp_level_b_integration.py  test_bvp_level_c_integration.py  test_bvp_level_d_integration.py  test_bvp_level_e_integration.py  test_bvp_level_f_integration.py  test_bvp_level_g_integration.py  test_bvp_levels_integration.py
(+1181 files in other folders)
